module-system/sov-modules-macros/tests/rpc/expose_rpc_first_generic_not_spec.stderr
error[E0425]: cannot find value `api_state_accessor` in this scope
  --> tests/rpc/expose_rpc_first_generic_not_spec.rs:91:26
   |
91 |                     .get(api_state_accessor)
   |                          ^^^^^^^^^^^^^^^^^^ not found in this scope

error[E0277]: the trait bound `T: sov_modules_api::Spec` is not satisfied
   --> tests/rpc/expose_rpc_first_generic_not_spec.rs:102:16
    |
102 | struct Runtime<T: TestSpec, S: Spec> {
    |                ^ the trait `sov_modules_api::Spec` is not implemented for `T`
    |
note: required by a bound in `sov_modules_api::Genesis::Spec`
   --> $WORKSPACE/module-system/sov-modules-api/src/module/mod.rs
    |
    |     type Spec: Spec;
    |                ^^^^ required by this bound in `Genesis::Spec`
help: consider further restricting this bound
    |
102 | struct Runtime<T: TestSpec + sov_modules_api::Spec, S: Spec> {
    |                            +++++++++++++++++++++++

error[E0277]: the trait bound `T: sov_modules_api::Spec` is not satisfied
   --> tests/rpc/expose_rpc_first_generic_not_spec.rs:100:19
    |
100 | #[derive(Default, Genesis, DispatchCall, MessageCodec)]
    |                   ^^^^^^^ the trait `sov_modules_api::Spec` is not implemented for `T`
    |
    = note: this error originates in the derive macro `Genesis` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider further restricting this bound
    |
102 | struct Runtime<T: TestSpec + sov_modules_api::Spec, S: Spec> {
    |                            +++++++++++++++++++++++

error[E0277]: the trait bound `T: sov_modules_api::Spec` is not satisfied
   --> tests/rpc/expose_rpc_first_generic_not_spec.rs:100:19
    |
100 | #[derive(Default, Genesis, DispatchCall, MessageCodec)]
    |                   ^^^^^^^ the trait `sov_modules_api::Spec` is not implemented for `T`, which is required by `impl sov_modules_api::GenesisState<<Self as sov_modules_api::Genesis>::Spec>: GenesisState<T>`
    |
    = note: required for `impl sov_modules_api::GenesisState<<Self as sov_modules_api::Genesis>::Spec>` to implement `GenesisState<T>`
note: the requirement `impl sov_modules_api::GenesisState<<Self as sov_modules_api::Genesis>::Spec>: GenesisState<T>` appears on the `impl`'s method `genesis` but not on the corresponding trait's method
   --> $WORKSPACE/module-system/sov-modules-api/src/module/mod.rs
    |
    | pub trait Genesis {
    |           ------- in this trait
...
    |     fn genesis(
    |        ^^^^^^^ this trait's method doesn't have the requirement `impl sov_modules_api::GenesisState<<Self as sov_modules_api::Genesis>::Spec>: GenesisState<T>`
    = note: this error originates in the derive macro `Genesis` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider further restricting this bound
    |
102 | struct Runtime<T: TestSpec + sov_modules_api::Spec, S: Spec> {
    |                            +++++++++++++++++++++++

error[E0277]: `<T as TestSpec>::Data` cannot be shared between threads safely
   --> tests/rpc/expose_rpc_first_generic_not_spec.rs:102:8
    |
102 | struct Runtime<T: TestSpec, S: Spec> {
    |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `<T as TestSpec>::Data` cannot be shared between threads safely
    |
    = help: within `Runtime<T, S>`, the trait `std::marker::Sync` is not implemented for `<T as TestSpec>::Data`, which is required by `Runtime<T, S>: std::marker::Sync`
    = note: required because it appears within the type `(<T as TestSpec>::Data, sov_state::User)`
note: required because it appears within the type `PhantomData<(<T as TestSpec>::Data, sov_state::User)>`
   --> $RUST/core/src/marker.rs
    |
    | pub struct PhantomData<T: ?Sized>;
    |            ^^^^^^^^^^^
note: required because it appears within the type `sov_modules_api::containers::value::NamespacedStateValue<sov_state::User, <T as TestSpec>::Data>`
   --> $WORKSPACE/module-system/sov-modules-api/src/containers/value.rs
    |
    | pub struct NamespacedStateValue<N, V, Codec = BorshCodec> {
    |            ^^^^^^^^^^^^^^^^^^^^
note: required because it appears within the type `QueryModule<S, <T as TestSpec>::Data>`
   --> tests/rpc/expose_rpc_first_generic_not_spec.rs:33:16
    |
33  |     pub struct QueryModule<S: Spec, D: Data> {
    |                ^^^^^^^^^^^
note: required because it appears within the type `Runtime<T, S>`
   --> tests/rpc/expose_rpc_first_generic_not_spec.rs:102:8
    |
102 | struct Runtime<T: TestSpec, S: Spec> {
    |        ^^^^^^^
note: required by a bound in `sov_modules_api::DispatchCall`
   --> $WORKSPACE/module-system/sov-modules-api/src/module/dispatch.rs
    |
    | pub trait DispatchCall: Send + Sync {
    |                                ^^^^ required by this bound in `DispatchCall`
help: consider further restricting the associated type
    |
102 | struct Runtime<T: TestSpec, S: Spec> where <T as TestSpec>::Data: std::marker::Sync {
    |                                      ++++++++++++++++++++++++++++++++++++++++++++++

error[E0277]: `<T as TestSpec>::Data` cannot be sent between threads safely
   --> tests/rpc/expose_rpc_first_generic_not_spec.rs:102:8
    |
102 | struct Runtime<T: TestSpec, S: Spec> {
    |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `<T as TestSpec>::Data` cannot be sent between threads safely
    |
    = help: within `Runtime<T, S>`, the trait `Send` is not implemented for `<T as TestSpec>::Data`, which is required by `Runtime<T, S>: Send`
    = note: required because it appears within the type `(<T as TestSpec>::Data, sov_state::User)`
note: required because it appears within the type `PhantomData<(<T as TestSpec>::Data, sov_state::User)>`
   --> $RUST/core/src/marker.rs
    |
    | pub struct PhantomData<T: ?Sized>;
    |            ^^^^^^^^^^^
note: required because it appears within the type `sov_modules_api::containers::value::NamespacedStateValue<sov_state::User, <T as TestSpec>::Data>`
   --> $WORKSPACE/module-system/sov-modules-api/src/containers/value.rs
    |
    | pub struct NamespacedStateValue<N, V, Codec = BorshCodec> {
    |            ^^^^^^^^^^^^^^^^^^^^
note: required because it appears within the type `QueryModule<S, <T as TestSpec>::Data>`
   --> tests/rpc/expose_rpc_first_generic_not_spec.rs:33:16
    |
33  |     pub struct QueryModule<S: Spec, D: Data> {
    |                ^^^^^^^^^^^
note: required because it appears within the type `Runtime<T, S>`
   --> tests/rpc/expose_rpc_first_generic_not_spec.rs:102:8
    |
102 | struct Runtime<T: TestSpec, S: Spec> {
    |        ^^^^^^^
note: required by a bound in `sov_modules_api::DispatchCall`
   --> $WORKSPACE/module-system/sov-modules-api/src/module/dispatch.rs
    |
    | pub trait DispatchCall: Send + Sync {
    |                         ^^^^ required by this bound in `DispatchCall`
help: consider further restricting the associated type
    |
102 | struct Runtime<T: TestSpec, S: Spec> where <T as TestSpec>::Data: Send {
    |                                      +++++++++++++++++++++++++++++++++

error[E0277]: the trait bound `T: sov_modules_api::Spec` is not satisfied
   --> tests/rpc/expose_rpc_first_generic_not_spec.rs:102:16
    |
102 | struct Runtime<T: TestSpec, S: Spec> {
    |                ^ the trait `sov_modules_api::Spec` is not implemented for `T`
    |
note: required by a bound in `sov_modules_api::DispatchCall::Spec`
   --> $WORKSPACE/module-system/sov-modules-api/src/module/dispatch.rs
    |
    |     type Spec: Spec;
    |                ^^^^ required by this bound in `DispatchCall::Spec`
help: consider further restricting this bound
    |
102 | struct Runtime<T: TestSpec + sov_modules_api::Spec, S: Spec> {
    |                            +++++++++++++++++++++++

error[E0277]: `<T as TestSpec>::Data` cannot be shared between threads safely
   --> tests/rpc/expose_rpc_first_generic_not_spec.rs:100:28
    |
100 | #[derive(Default, Genesis, DispatchCall, MessageCodec)]
    |                            ^^^^^^^^^^^^ `<T as TestSpec>::Data` cannot be shared between threads safely
    |
    = help: within `RuntimeCall<T, S>`, the trait `std::marker::Sync` is not implemented for `<T as TestSpec>::Data`, which is required by `RuntimeCall<T, S>: std::marker::Sync`
note: required because it appears within the type `RuntimeCall<T, S>`
   --> tests/rpc/expose_rpc_first_generic_not_spec.rs:100:28
    |
100 | #[derive(Default, Genesis, DispatchCall, MessageCodec)]
    |                            ^^^^^^^^^^^^
note: required by a bound in `sov_modules_api::DispatchCall::Decodable`
   --> $WORKSPACE/module-system/sov-modules-api/src/module/dispatch.rs
    |
    |     type Decodable: Send + Sync;
    |                            ^^^^ required by this bound in `DispatchCall::Decodable`
    = note: this error originates in the derive macro `DispatchCall` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider further restricting the associated type
    |
102 | struct Runtime<T: TestSpec, S: Spec> where <T as TestSpec>::Data: std::marker::Sync {
    |                                      ++++++++++++++++++++++++++++++++++++++++++++++

error[E0277]: `<T as TestSpec>::Data` cannot be sent between threads safely
   --> tests/rpc/expose_rpc_first_generic_not_spec.rs:100:28
    |
100 | #[derive(Default, Genesis, DispatchCall, MessageCodec)]
    |                            ^^^^^^^^^^^^ `<T as TestSpec>::Data` cannot be sent between threads safely
    |
    = help: within `RuntimeCall<T, S>`, the trait `Send` is not implemented for `<T as TestSpec>::Data`, which is required by `RuntimeCall<T, S>: Send`
note: required because it appears within the type `RuntimeCall<T, S>`
   --> tests/rpc/expose_rpc_first_generic_not_spec.rs:100:28
    |
100 | #[derive(Default, Genesis, DispatchCall, MessageCodec)]
    |                            ^^^^^^^^^^^^
note: required by a bound in `sov_modules_api::DispatchCall::Decodable`
   --> $WORKSPACE/module-system/sov-modules-api/src/module/dispatch.rs
    |
    |     type Decodable: Send + Sync;
    |                     ^^^^ required by this bound in `DispatchCall::Decodable`
    = note: this error originates in the derive macro `DispatchCall` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider further restricting the associated type
    |
102 | struct Runtime<T: TestSpec, S: Spec> where <T as TestSpec>::Data: Send {
    |                                      +++++++++++++++++++++++++++++++++

error[E0277]: the trait bound `T: sov_modules_api::Spec` is not satisfied
   --> tests/rpc/expose_rpc_first_generic_not_spec.rs:100:28
    |
100 | #[derive(Default, Genesis, DispatchCall, MessageCodec)]
    |                            ^^^^^^^^^^^^ the trait `sov_modules_api::Spec` is not implemented for `T`
    |
note: required by a bound in `WorkingSet`
   --> $WORKSPACE/module-system/sov-modules-api/src/state/accessors/scratchpad.rs
    |
    | pub struct WorkingSet<S: Spec> {
    |                          ^^^^ required by this bound in `WorkingSet`
    = note: this error originates in the derive macro `DispatchCall` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider further restricting this bound
    |
102 | struct Runtime<T: TestSpec + sov_modules_api::Spec, S: Spec> {
    |                            +++++++++++++++++++++++

error[E0277]: `D` cannot be shared between threads safely
  --> tests/rpc/expose_rpc_first_generic_not_spec.rs:82:9
   |
82 |         #[rpc_gen(client, server, namespace = "queryModule")]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `D` cannot be shared between threads safely
   |
   = note: required because it appears within the type `(D, sov_state::User)`
note: required because it appears within the type `PhantomData<(D, sov_state::User)>`
  --> $RUST/core/src/marker.rs
   |
   | pub struct PhantomData<T: ?Sized>;
   |            ^^^^^^^^^^^
note: required because it appears within the type `sov_modules_api::containers::value::NamespacedStateValue<sov_state::User, D>`
  --> $WORKSPACE/module-system/sov-modules-api/src/containers/value.rs
   |
   | pub struct NamespacedStateValue<N, V, Codec = BorshCodec> {
   |            ^^^^^^^^^^^^^^^^^^^^
note: required because it appears within the type `QueryModule<S, D>`
  --> tests/rpc/expose_rpc_first_generic_not_spec.rs:33:16
   |
33 |     pub struct QueryModule<S: Spec, D: Data> {
   |                ^^^^^^^^^^^
   = note: required for `Arc<QueryModule<S, D>>` to implement `std::marker::Sync`
note: required because it appears within the type `ApiState<QueryModule<S, D>, S>`
  --> $WORKSPACE/module-system/sov-modules-api/src/rest/mod.rs
   |
   | pub struct ApiState<T, S: Spec> {
   |            ^^^^^^^^
note: required by a bound in `QueryModuleRpcServer`
  --> tests/rpc/expose_rpc_first_generic_not_spec.rs:82:9
   |
82 |         #[rpc_gen(client, server, namespace = "queryModule")]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `QueryModuleRpcServer`
83 |         impl<S, D: Data> QueryModule<S, D>
   |                          ----------- required by a bound in this trait
   = note: this error originates in the attribute macro `rpc_gen` which comes from the expansion of the attribute macro `::jsonrpsee::proc_macros::rpc` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider further restricting this bound
   |
83 |         impl<S, D: Data + std::marker::Sync> QueryModule<S, D>
   |                         +++++++++++++++++++

error[E0277]: `D` cannot be sent between threads safely
  --> tests/rpc/expose_rpc_first_generic_not_spec.rs:82:9
   |
82 |         #[rpc_gen(client, server, namespace = "queryModule")]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `D` cannot be sent between threads safely
   |
   = note: required because it appears within the type `(D, sov_state::User)`
note: required because it appears within the type `PhantomData<(D, sov_state::User)>`
  --> $RUST/core/src/marker.rs
   |
   | pub struct PhantomData<T: ?Sized>;
   |            ^^^^^^^^^^^
note: required because it appears within the type `sov_modules_api::containers::value::NamespacedStateValue<sov_state::User, D>`
  --> $WORKSPACE/module-system/sov-modules-api/src/containers/value.rs
   |
   | pub struct NamespacedStateValue<N, V, Codec = BorshCodec> {
   |            ^^^^^^^^^^^^^^^^^^^^
note: required because it appears within the type `QueryModule<S, D>`
  --> tests/rpc/expose_rpc_first_generic_not_spec.rs:33:16
   |
33 |     pub struct QueryModule<S: Spec, D: Data> {
   |                ^^^^^^^^^^^
   = note: required for `Arc<QueryModule<S, D>>` to implement `std::marker::Sync`
note: required because it appears within the type `ApiState<QueryModule<S, D>, S>`
  --> $WORKSPACE/module-system/sov-modules-api/src/rest/mod.rs
   |
   | pub struct ApiState<T, S: Spec> {
   |            ^^^^^^^^
note: required by a bound in `QueryModuleRpcServer`
  --> tests/rpc/expose_rpc_first_generic_not_spec.rs:82:9
   |
82 |         #[rpc_gen(client, server, namespace = "queryModule")]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `QueryModuleRpcServer`
83 |         impl<S, D: Data> QueryModule<S, D>
   |                          ----------- required by a bound in this trait
   = note: this error originates in the attribute macro `rpc_gen` which comes from the expansion of the attribute macro `::jsonrpsee::proc_macros::rpc` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider further restricting this bound
   |
83 |         impl<S, D: Data + std::marker::Send> QueryModule<S, D>
   |                         +++++++++++++++++++
